<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uvigo.esei.dm1415.p08.MainActivity" >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" >
    
    	<menu xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		tools:context="es.uvigo.esei.dm1415.p08.MainActivity">
   			<item
        		android:id="@+id/action_settings2"
        		android:orderInCategory="100"
        		android:showAsAction="never"
        		android:title="@string/action_settings2" />
   			<item
        		android:id="@+id/action_settings3"
        		android:orderInCategory="100"
        		android:showAsAction="never"
        		android:title="@string/action_settings3"/>
   			<item
        		android:id="@+id/action_settings4"
        		android:orderInCategory="100"
        		android:showAsAction="never"
        		android:title="@string/action_settings4" />
   		</menu> 
	</item>
	
	<item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings5" />
	
	<item
        android:id="@+id/txtMsg"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/txtMsg" />
	
	<item
        android:id="@+id/action_settings6"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings6" />
</menu>
